test/sema/negative/char.impala
fn main() -> () {
    let a = 'ab';
    let b = '\g';
    let c = '\hx';
    let d = '\nx';
}
